# pixelfixer

./: .gitignore  CMakeLists.txt  README.md
include/: Algorithm.h  AlgorithmModule.h  BandingCorrection.h  BandingDetection.h  Canvas.h  Common.h  Dithering.h  GeneralBandingCorrection.h  PillowShadingCorrection.h  Pixel.h  PixelArtImage.h  SubjectDetection.h  pixproc.h
src/: Canvas.cpp  Canvas.h  Pixel.h  PixelArtImage.cpp  main.cpp  pixproc.cpp
